tests/paczka1/fuzzy1/86152851.err
Error in line 4: VRRRdcc S495 3,3
Error in line 2: usuYZccM S687 75,4
Error in line 21: VRRRdcc S829 77,1
Error in line 18: pLxqIa S495 94,6
Error in line 28: Fsqsgct S495 2,89
Error in line 27: usuYZccM S687 79,2
Error in line 31: usuYZccM S495 54,6
Error in line 34: Fsqsgct S495 3,3
